# spatial-audio-upmixer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/specs/: dolby_atmos_profile.md  spatial_layouts_bs775_bs2051.md
docs/: project_manifest_parity.md  web_architecture.md
docs/standards/: adm_metadata_bs2076.md  loudness_dsp_bs1770.md
examples/: atmos_music.json  atmos_music.yaml  batch_album_stem.yaml  batch_dir_stem.yaml  batch_explicit_jobs.yaml  batch_files_realtime.yaml  stem_714.yaml  stem_hierarchical.yaml  stereo_to_51.yaml
tests/: conftest.py  test_adm_compliance.py  test_batch.py  test_cli_execution.py  test_coherence.py  test_decorrelator.py  test_direct_ambient.py  test_execution.py  test_job_subprocess.py  test_lfe.py  test_loudness_compliance.py  test_manifest.py  test_mastering_bass.py  test_mastering_comp.py  test_mastering_eq.py  test_mastering_golden.py  test_mastering_perf.py  test_match_reference.py  test_midside.py  test_pipeline.py  test_project_storage.py  test_resource_policy.py  test_separator_optimization.py  test_source_anchor.py  test_spatial.py  test_stem_cache.py  test_stem_plan.py  test_stem_router.py  test_stem_separation_integration.py  test_stem_silence_skip.py  test_stft.py  test_web.py
upmixer/: __init__.py  __main__.py  batch.py  config.py  execution.py  formats.py  loudness.py  manifest.py  mastering_bass.py  mastering_comp.py  mastering_eq.py  pipeline.py  result.py  utils.py
upmixer/analysis/: __init__.py  coherence.py  harmonicity.py  panning.py  spatial.py  stem_analyzer.py  stft.py  transient.py
upmixer/decomposition/: direct_ambient.py  midside.py
upmixer/io/: adm_writer.py  atomic.py  reader.py  writer.py
upmixer/mastering/: __init__.py  bass.py  chain.py  compressor.py  eq.py  eq_match.py  match_reference.py
upmixer/routing/: channel_router.py  decorrelator.py  lfe.py
upmixer/separation/: __init__.py  content_mixer.py  separator.py  silence.py  source_anchor.py  stem_analyzer.py  stem_cache.py  stem_eq.py  stem_pipeline.py  stem_plan.py  stem_rebalance.py  stem_router.py
upmixer/upmix/: multichannel.py
upmixer_web/: __init__.py  __main__.py  api.py  database.py  imports.py  job_subprocess.py  jobs.py  manifests.py  metadata.py  models.py  project_routing.py  project_storage.py  projects.py  schemas.py  separation.py  settings.py  storage.py  worker.py
upmixer_web/migrations/: env.py
upmixer_web/migrations/versions/: 0fc416c63eae_add_mastering_references.py  4d7e9b5c2a10_add_project_mastering_reference.py  61d4c1a3e217_add_projects.py  8012858fef4f_create_web_job_tables.py  8a2d4f9be101_add_project_source_previews.py  __init__.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  theme.tsx
web/src/app/: AppShell.tsx  HeaderSlot.tsx  ThemeToggle.tsx
web/src/components/forms/: fields.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  slider.tsx  switch.tsx  tabs.tsx
web/src/features/composer/: AlbumOverview.tsx  JobComposer.test.tsx  JobComposer.tsx  ManifestEditor.tsx
web/src/features/jobs/: JobActions.tsx  JobCard.tsx  JobTable.tsx  JobsPage.test.tsx  (+4 more)
web/src/test/: setup.ts
(+25 files in other folders)
