[project]
name = "upmixer"
version = "0.1.0"
description = "Stereo to multichannel audio upmixer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["audio", "upmix", "dolby-atmos", "surround-sound", "stem-separation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.12",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]
manifest = [
    "pyyaml>=6.0",
]
separation-cpu = [
    "audio-separator[cpu]>=0.24",
]
separation-gpu = [
    "audio-separator[gpu]>=0.24",
]

[project.scripts]
upmixer = "upmixer.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "perf: performance benchmarks (run with -m perf; skipped in CI by default)",
]
